Fix title overflow in to do list

--- a/resources/sass/todo.scss
+++ b/resources/sass/todo.scss
@@ -71,6 +71,7 @@ div.app-container
             font-family: $body-font;
             font-size: 2em;
             max-width: 85%;
+            overflow-x: hidden;
             text-decoration: none;
             vertical-align: middle;
 
